# turtle-canslim

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  rebuild.sh  run_tui.sh
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_stock_canslim_fields.py  003_add_earnings_tracking.py
config/: settings.yaml
docs/: AMAZON_DEPLOY.md  DB_GUIDE.md  DEPLOY.md  DESIGN.md  PROGRESS.md  SETUP.md  SPEC.md  TASKS.md
scripts/: fetch_data.py  run_backtest.py  run_screener.py  run_trading.py  run_tui.py  test_us_order.py
src/core/: config.py  database.py  exceptions.py  logger.py  scheduler.py  trade_journal.py
src/data/: __init__.py  auto_fetcher.py  dart_client.py  kis_client.py  models.py  repositories.py  sec_edgar_client.py  us_client.py
src/execution/: broker_interface.py  live_broker.py  order_manager.py  paper_broker.py  performance.py  portfolio.py
src/notification/: telegram_bot.py
src/risk/: position_sizing.py  stop_loss.py  unit_limits.py
src/screener/: __init__.py  canslim.py  scorer.py  us_canslim.py
src/screener/criteria/: a_annual.py  c_earnings.py  i_institution.py  l_leader.py  m_market.py  n_new.py  s_supply.py
src/signals/: atr.py  breakout.py  pyramid.py  turtle.py
src/tui/: __init__.py  app.py
src/tui/widgets/: __init__.py
tests/: conftest.py
tests/integration/: test_trading_flow.py
tests/unit/: test_canslim.py  test_risk.py  test_turtle.py
